Fix merge request file browser height clipped at the top of the page
Changelog: fixed

--- a/app/assets/stylesheets/framework/variables.scss
+++ b/app/assets/stylesheets/framework/variables.scss
@@ -485,7 +485,7 @@ $performance-bar-height: 2.5rem;
 $system-header-height: 16px;
 $system-footer-height: $system-header-height;
 $mr-sticky-header-height: 72px;
-$mr-review-bar-height: calc(2rem + 13px);
+$mr-review-bar-height: calc(2rem + 16px);
 $flash-height: 52px;
 $context-header-height: 60px;
 $top-bar-height: 48px;
